# food-retail-marketplace/ardo-backend/handler/http/auth/auth_http.go
@@ -91,10 +91,13 @@ func (hd *HttpDelivery) Logout(w http.ResponseWriter, r *http.Request) {
 }
 
 type RegisterIn struct {
-	FirstName       string `json:"firstName"`
-	LastName        string `json:"lastName"`
-	Email           string `json:"email"`
-	Phone           string `json:"phone"`
+	FirstName string `json:"firstName"`
+	LastName  string `json:"lastName"`
+	Email     string `json:"email"`
+	Phone     struct {
+		Number      string `json:"number"`
+		CountryCode string `json:"countryCode"`
+	} `json:"phone"`
 	Password        string `json:"password"`
 	PreferredLang   string `json:"preferredLang"`
 	Address         string `json:"address"`
@@ -120,7 +123,7 @@ func (hd *HttpDelivery) Register(w http.ResponseWriter, r *http.Request) {
 		response.NewBad(hd.logger, w, r, err)
 		return
 	}
-	err := hd.service.Register(r.Context(), in.FirstName, in.LastName, in.Email, in.Phone, in.Password, in.PreferredLang, in.Address, in.Floor, in.Apartment, in.DeliveryComment)
+	err := hd.service.Register(r.Context(), in.FirstName, in.LastName, in.Email, in.Phone.Number, in.Phone.CountryCode, in.Password, in.PreferredLang, in.Address, in.Floor, in.Apartment, in.DeliveryComment)
 	if err != nil {
 		response.NewError(hd.logger, w, r, err)
 		return
