# food-retail-marketplace/ardo-backend/handler/http/current_user/current_user_http.go
@@ -2,6 +2,7 @@ package current_user
 
 import (
 	"encoding/json"
+	"github/nnniyaz/ardo/domain/base/deliveryInfo"
 	"github/nnniyaz/ardo/domain/user"
 	"github/nnniyaz/ardo/handler/http/response"
 	"github/nnniyaz/ardo/pkg/logger"
@@ -24,26 +25,92 @@ func NewHttpDelivery(l logger.Logger, s currentUserService.CurrentUserService) *
 // -----------------------------------------------------------------------------
 
 type User struct {
-	Id            string    `json:"id"`
-	Email         string    `json:"email"`
-	FirstName     string    `json:"firstName"`
-	LastName      string    `json:"lastName"`
+	Id        string `json:"id"`
+	FirstName string `json:"firstName"`
+	LastName  string `json:"lastName"`
+	Email     string `json:"email"`
+	Phone     struct {
+		Number      string `json:"number"`
+		CountryCode string `json:"countryCode"`
+	} `json:"phone"`
+	DeliveryPoints []struct {
+		Id              string `json:"id"`
+		Address         string `json:"address"`
+		Floor           string `json:"floor"`
+		Apartment       string `json:"apartment"`
+		DeliveryComment string `json:"deliveryComment"`
+	} `json:"deliveryPoints"`
+	LastDeliveryPoint struct {
+		Id              string `json:"id"`
+		Address         string `json:"address"`
+		Floor           string `json:"floor"`
+		Apartment       string `json:"apartment"`
+		DeliveryComment string `json:"deliveryComment"`
+	} `json:"lastDeliveryPoint"`
 	UserType      string    `json:"userType"`
 	PreferredLang string    `json:"preferredLang"`
 	CreatedAt     time.Time `json:"createdAt"`
 	UpdatedAt     time.Time `json:"updatedAt"`
+	Version       int       `json:"version"`
 }
 
 func newUser(u *user.User) User {
+	userPhone := u.GetPhone()
+	deliveryPoints := make([]struct {
+		Id              string `json:"id"`
+		Address         string `json:"address"`
+		Floor           string `json:"floor"`
+		Apartment       string `json:"apartment"`
+		DeliveryComment string `json:"deliveryComment"`
+	}, len(u.GetDeliveryPoints()))
+	for i, dp := range u.GetDeliveryPoints() {
+		deliveryPoints[i] = struct {
+			Id              string `json:"id"`
+			Address         string `json:"address"`
+			Floor           string `json:"floor"`
+			Apartment       string `json:"apartment"`
+			DeliveryComment string `json:"deliveryComment"`
+		}{
+			Id:              dp.GetId().String(),
+			Address:         dp.GetAddress(),
+			Floor:           dp.GetFloor(),
+			Apartment:       dp.GetApartment(),
+			DeliveryComment: dp.GetDeliveryComment(),
+		}
+	}
+	deliveryPoint := u.GetLastDeliveryPoint()
+
 	return User{
-		Id:            u.GetId().String(),
-		Email:         u.GetEmail().String(),
-		FirstName:     u.GetFirstName().String(),
-		LastName:      u.GetLastName().String(),
+		Id:        u.GetId().String(),
+		FirstName: u.GetFirstName().String(),
+		LastName:  u.GetLastName().String(),
+		Email:     u.GetEmail().String(),
+		Phone: struct {
+			Number      string `json:"number"`
+			CountryCode string `json:"countryCode"`
+		}{
+			Number:      userPhone.GetNumber(),
+			CountryCode: userPhone.GetCountryCode(),
+		},
+		DeliveryPoints: deliveryPoints,
+		LastDeliveryPoint: struct {
+			Id              string `json:"id"`
+			Address         string `json:"address"`
+			Floor           string `json:"floor"`
+			Apartment       string `json:"apartment"`
+			DeliveryComment string `json:"deliveryComment"`
+		}{
+			Id:              deliveryPoint.GetId().String(),
+			Address:         deliveryPoint.GetAddress(),
+			Floor:           deliveryPoint.GetFloor(),
+			Apartment:       deliveryPoint.GetApartment(),
+			DeliveryComment: deliveryPoint.GetDeliveryComment(),
+		},
 		UserType:      u.GetUserType().String(),
 		PreferredLang: u.GetUserPreferredLang().String(),
 		CreatedAt:     u.GetCreatedAt(),
 		UpdatedAt:     u.GetUpdatedAt(),
+		Version:       u.GetVersion(),
 	}
 }
 
@@ -181,6 +248,111 @@ func (hd *HttpDelivery) UpdateCurrentUserPassword(w http.ResponseWriter, r *http
 	}
 	u := r.Context().Value("user").(user.User)
 	err := hd.service.ChangePassword(r.Context(), &u, in.OldPassword, in.NewPassword)
+	if err != nil {
+		response.NewError(hd.logger, w, r, err)
+		return
+	}
+	response.NewSuccess(hd.logger, w, r, nil)
+}
+
+type AddCurrentUserDeliveryPointIn struct {
+	Address         string `json:"address"`
+	Floor           string `json:"floor"`
+	Apartment       string `json:"apartment"`
+	DeliveryComment string `json:"deliveryComment"`
+}
+
+// AddCurrentUserDeliveryPoint godoc
+//
+//	@Summary		Add current user delivery point
+//	@Description	This can only be done by the logged-in user.
+//	@Tags			Current User
+//	@Accept			json
+//	@Produce		json
+//	@Param			data	body		AddCurrentUserDeliveryPointIn	true	"Add current user delivery point object"
+//	@Success		200		{object}	response.Success
+//	@Failure		default	{object}	response.Error
+//	@Router			/me/delivery-point [post]
+
+func (hd *HttpDelivery) AddCurrentUserDeliveryPoint(w http.ResponseWriter, r *http.Request) {
+	var in AddCurrentUserDeliveryPointIn
+	if err := json.NewDecoder(r.Body).Decode(&in); err != nil {
+		response.NewBad(hd.logger, w, r, err)
+		return
+	}
+	u := r.Context().Value("user").(user.User)
+	userNewDeliveryInfo, err := deliveryInfo.NewDeliveryInfo(in.Address, in.Floor, in.Apartment, in.DeliveryComment)
+	if err != nil {
+		response.NewError(hd.logger, w, r, err)
+		return
+	}
+	err = hd.service.AddDeliveryPoint(r.Context(), &u, userNewDeliveryInfo)
+	if err != nil {
+		response.NewError(hd.logger, w, r, err)
+		return
+	}
+	response.NewSuccess(hd.logger, w, r, nil)
+}
+
+type UpdateCurrentUserDeliveryPointIn struct {
+	Id              string `json:"id"`
+	Address         string `json:"address"`
+	Floor           string `json:"floor"`
+	Apartment       string `json:"apartment"`
+	DeliveryComment string `json:"deliveryComment"`
+}
+
+// UpdateCurrentUserDeliveryPoint godoc
+//
+//	@Summary		Update current user delivery point
+//	@Description	This can only be done by the logged-in user.
+//	@Tags			Current User
+//	@Accept			json
+//	@Produce		json
+//	@Param			data	body		UpdateCurrentUserDeliveryPointIn	true	"Update current user delivery point object"
+//	@Success		200		{object}	response.Success
+//	@Failure		default	{object}	response.Error
+//	@Router			/me/delivery-points [put]
+
+func (hd *HttpDelivery) UpdateCurrentUserDeliveryPoint(w http.ResponseWriter, r *http.Request) {
+	var in UpdateCurrentUserDeliveryPointIn
+	if err := json.NewDecoder(r.Body).Decode(&in); err != nil {
+		response.NewBad(hd.logger, w, r, err)
+		return
+	}
+	u := r.Context().Value("user").(user.User)
+	err := hd.service.UpdateDeliveryPoint(r.Context(), &u, in.Id, in.Address, in.Floor, in.Apartment, in.DeliveryComment)
+	if err != nil {
+		response.NewError(hd.logger, w, r, err)
+		return
+	}
+	response.NewSuccess(hd.logger, w, r, nil)
+}
+
+type ChangeCurrentUserLastDeliveryPointIn struct {
+	DeliveryPointId string `json:"deliveryPointId"`
+}
+
+// ChangeCurrentUserLastDeliveryPoint godoc
+//
+//	@Summary		Update current user delivery points
+//	@Description	This can only be done by the logged-in user.
+//	@Tags			Current User
+//	@Accept			json
+//	@Produce		json
+//	@Param			data	body		ChangeCurrentUserLastDeliveryPointIn	true	"Update current user delivery points object"
+//	@Success		200		{object}	response.Success
+//	@Failure		default	{object}	response.Error
+//	@Router			/me/delivery-points [put]
+
+func (hd *HttpDelivery) ChangeCurrentUserLastDeliveryPoint(w http.ResponseWriter, r *http.Request) {
+	var in ChangeCurrentUserLastDeliveryPointIn
+	if err := json.NewDecoder(r.Body).Decode(&in); err != nil {
+		response.NewBad(hd.logger, w, r, err)
+		return
+	}
+	u := r.Context().Value("user").(user.User)
+	err := hd.service.ChangeLastDeliveryPoint(r.Context(), &u, in.DeliveryPointId)
 	if err != nil {
 		response.NewError(hd.logger, w, r, err)
 		return
